zeit.content.advertisement changes
==================================


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2015-08-24)
------------------

- Initial release.