@@ -6,6 +6,9 @@
 
   <include package="zeit.cms" file="ftesting.zcml" />
 
+  <include package="zeit.content.image" />
+  <include package="zeit.content.image.browser" />
+
   <include package="zeit.content.advertisement" />
   <include package="zeit.content.advertisement.browser" />
 
